--- a/index.html
+++ b/index.html
@@ -5,104 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Official 2026</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f0f4f8; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f9; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); overflow-x: hidden; }
 
-        /* HEADER */
+        /* HEADER & NAV */
         header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
-        .l-btn { padding: 5px 12px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 8px; font-weight: bold; margin-left: 5px; }
+        nav { display: flex; gap: 20px; align-items: center; }
+        nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; transition: 0.3s; }
+        nav a:hover { color: orange; }
+        .l-btn { padding: 5px 10px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; font-size: 0.75rem; }
         .l-btn.active { background: var(--blue); color: white; }
 
-        /* STATS TRACKER */
-        .tracker { background: #eef2f7; padding: 10px; text-align: center; font-weight: bold; color: var(--blue); border-bottom: 2px solid #ddd; }
-        #count { color: #ef4444; font-size: 1.2rem; }
+        /* YELLOW MOVEMENT TRACKER */
+        .yellow-tracker { background: var(--yellow); color: var(--blue); padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; position: relative; }
+        .scrolling-text { display: inline-block; animation: scroll 20s linear infinite; font-size: 0.9rem; }
+        @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
 
-        /* HERO */
-        .container { max-width: 1100px; margin: 20px auto; padding: 20px; }
-        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 30px rgba(0,0,0,0.2); }
-        .id-input { padding: 15px; width: 280px; border-radius: 10px; border: none; font-size: 1.1rem; text-align: center; margin: 20px 0; }
-        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 10px; font-weight: 800; cursor: pointer; }
+        /* HERO & STATS */
+        .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
+        .stats-bar { text-align: center; padding: 10px; color: var(--blue); font-weight: bold; border-bottom: 1px solid #ddd; }
+        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); margin-top: 10px; }
+        .id-input { padding: 15px; width: 300px; border-radius: 12px; border: none; font-size: 1.2rem; text-align: center; margin: 20px 0; outline: none; }
+        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
 
-        /* TRACKS GRID */
-        .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
+        /* CONTENT SECTIONS */
+        .section-h { font-size: 1.8rem; color: var(--blue); margin: 50px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
+        .content-card { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
+        
+        /* LIVE & FAQ */
+        .live-box { border: 2px solid #ef4444; background: #fffafa; display: flex; align-items: center; gap: 15px; padding: 25px; border-radius: 20px; }
+        details { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; }
+        summary { font-weight: bold; color: var(--blue); }
+
+        /* GRID */
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
-        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; opacity: 0; transform: translateY(20px); }
-        .card.show { opacity: 1; transform: translateY(0); }
-        .card img { width: 100%; height: 160px; object-fit: cover; background: #ddd; }
+        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; }
+        .card img { width: 100%; height: 150px; object-fit: cover; }
         .card-body { padding: 20px; }
         .j-btn { background: var(--yellow); color: var(--blue); border: none; padding: 10px; border-radius: 8px; font-weight: bold; width: 100%; cursor: pointer; }
-
-        /* FAQ & LIVE */
-        .content-card { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; }
-        .live-box { border: 2px solid #ef4444; display: flex; align-items: center; gap: 15px; padding: 20px; border-radius: 15px; background: #fffafa; }
-        .pulse { width: 12px; height: 12px; background: #ef4444; border-radius: 50%; animation: pulse 2s infinite; }
-        @keyframes pulse { 0% { box-shadow: 0 0 0 0px rgba(239, 68, 68, 0.4); } 70% { box-shadow: 0 0 0 10px rgba(239, 68, 68, 0); } 100% { box-shadow: 0 0 0 0px rgba(239, 68, 68, 0); } }
-        
-        footer { text-align: center; padding: 40px; color: #777; font-size: 0.9rem; }
     </style>
 </head>
 <body>
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
-    <div class="lang-bar">
-        <button class="l-btn" onclick="setL('en')" id="en-btn">EN</button>
-        <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
-        <button class="l-btn" onclick="setL('om')" id="om-btn">ORM</button>
-        <button class="l-btn" onclick="setL('ti')" id="ti-btn">ትግር</button>
-    </div>
+    <nav>
+        <a href="#tr-grid" id="nav-tr">Tracks</a>
+        <a href="#h-faq" id="nav-fq">FAQ</a>
+        <a href="#" id="nav-ab">About Us</a>
+        <div class="lang-bar">
+            <button class="l-btn" onclick="setL('en')" id="en-btn">EN</button>
+            <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
+            <button class="l-btn" onclick="setL('om')" id="om-btn">ORM</button>
+            <button class="l-btn" onclick="setL('ti')" id="ti-btn">ትግር</button>
+        </div>
+    </nav>
 </header>
 
-<div class="tracker">
-    <span id="stat-text">Active Citizens Joining:</span> <span id="count">942,105</span>
+<div class="yellow-tracker">
+    <div class="scrolling-text" id="scroll-msg">
+        New: Advanced AI Track is now open for enrollment! | Join over 942,000 citizens today. | Digital Ethiopia Mission 2026.
+    </div>
+</div>
+
+<div class="stats-bar">
+    <span id="st-txt">Active Citizens:</span> <span id="count" style="color:#ef4444">942,108</span>
 </div>
 
 <div class="container">
-    <div class="hero" id="hero"></div>
+    <section class="hero" id="hero"></section>
 
-    <h2 class="section-h" id="h-tr"></h2>
+    <h2 class="section-h" id="h-tr">Official Tracks</h2>
     <div class="grid" id="tr-grid"></div>
 
-    <h2 class="section-h" id="h-li"></h2>
+    <h2 class="section-h" id="h-li">Live Now</h2>
     <div class="content-card">
         <div class="live-box">
-            <div class="pulse"></div>
+            <div style="width:12px; height:12px; background:#ef4444; border-radius:50%; animation: pulse 2s infinite;"></div>
             <div><h3 id="lt" style="color:#ef4444"></h3><p id="ld"></p></div>
         </div>
     </div>
 
-    <h2 class="section-h" id="h-fq"></h2>
-    <div class="content-card" id="fq-box"></div>
+    <h2 class="section-h" id="h-faq">FAQ</h2>
+    <div class="content-card" id="faq-list"></div>
 </div>
 
-<footer id="foot"></footer>
+<footer style="text-align:center; padding:40px; color:#888;" id="foot"></footer>
 
 <script>
-    // LIVE COUNTER TRICKER
-    let c = 942105;
-    setInterval(() => {
-        c += Math.floor(Math.random() * 3);
-        document.getElementById('count').innerText = c.toLocaleString();
-    }, 3000);
+    // Stats Counter logic
+    let c = 942108;
+    setInterval(() => { c += Math.floor(Math.random() * 2); document.getElementById('count').innerText = c.toLocaleString(); }, 4000);
 
     const tracks = [
-        {n:"AI Engineering", img:"https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
-        {n:"Cyber Security", img:"https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
-        {n:"Web Development", img:"https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
-        {n:"Data Science", img:"https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"},
-        {n:"Cloud Systems", img:"https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"},
-        {n:"Mobile Apps", img:"https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=400"},
-        {n:"Networking", img:"https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"},
-        {n:"UI/UX Design", img:"https://images.unsplash.com/photo-1586717791821-3f44a563dc4c?w=400"}
+        {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
+        {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
+        {n: "Web Dev", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
+        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"},
+        {n: "Cloud Systems", img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"},
+        {n: "Networking", img: "https://images.unsplash.com/photo-1558494949-ef010cbdcc48?w=400"}
     ];
 
     const dict = {
-        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", li:"Live Now", lt:"Digital Workshop", ld:"Join to build your future", fq:"FAQ", ft:"© 2026 ልማት Hub", j:"JOIN", st:"Active Citizens:"},
-        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", li:"ቀጥታ ስርጭት", lt:"ዲጂታል ስልጠና", ld:"የወደፊት ህይወትዎን ለመገንባት ይቀላቀሉ", fq:"ጥያቄዎች", ft:"© 2026 ልማት Hub", j:"ተቀላቀል", st:"የተመዘገቡ ዜጎች:"},
-        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", li:"Kallaattiin", lt:"Workshop Diijitaalaa", ld:"Borii keessan ijaaruuf makkamaa", fq:"Gaaffiiwwan", ft:"© 2026 ልማት Hub", j:"MAKKAMI", st:"Hirmaattota:"},
-        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", li:"ብቐጥታ", lt:"ዲጂታል ስልጠና", ld:"ንመፃኢኹም ንምህናፅ እተዉ", fq:"ሕቶታት", ft:"© 2026 ልማት Hub", j:"ተሳተፍ", st:"ዝተመዝገቡ ዜጋታት:"}
+        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", li:"Live Now", lt:"Digital Workshop", ld:"Join to build your future", fq:"FAQ", ab:"About Us", ft:"© 2026 ልማት Hub", j:"JOIN", m:"New: Advanced AI Track is now open! | Join 942,000 citizens today."},
+        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", li:"ቀጥታ", lt:"ዲጂታል ስልጠና", ld:"የወደፊት ህይወትዎን ለመገንባት ይቀላቀሉ", fq:"ጥያቄዎች", ab:"ስለ እኛ", ft:"© 2026 ልማት Hub", j:"ተቀላቀል", m:"አዲስ፡ የላቀ የኤአይ ስልጠና አሁን ተከፍቷል! | ዛሬውኑ ይቀላቀሉ።"},
+        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", li:"Kallaattiin", lt:"Workshop Diijitaalaa", ld:"Borii ijaaruuf makkamaa", fq:"Gaaffii", ab:"Waa'ee Keenya", ft:"© 2026 ልማት Hub", j:"MAKKAMI", m:"Haaraa: Leenjiin AI banameera! | Hirmaattota 942,000 makkamaa."},
+        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", li:"ብቐጥታ", lt:"ዲጂታል ስልጠና", ld:"ንመፃኢኹም ንምህናፅ እተዉ", fq:"ሕቶታት", ab:"ብዛዕባና", ft:"© 2026 ልማት Hub", j:"ተሳተፍ", m:"ሓዱሽ፡ ስልጠና ኤአይ ተኸፊቱ ኣሎ! | ሎሚ ይቀላቀሉ።"}
     };
 
     function setL(l) {
@@ -111,7 +121,10 @@
         document.getElementById(l+'-btn').classList.add('active');
         const d = dict[l];
 
-        document.getElementById('stat-text').innerText = d.st;
+        document.getElementById('nav-tr').innerText = d.tr;
+        document.getElementById('nav-fq').innerText = d.fq;
+        document.getElementById('nav-ab').innerText = d.ab;
+        document.getElementById('scroll-msg').innerText = d.m;
         document.getElementById('h-tr').innerText = d.tr;
         document.getElementById('h-li').innerText = d.li;
         document.getElementById('lt').innerText = d.lt;
@@ -123,25 +136,15 @@
             <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
             <button onclick="enroll()" class="v-btn">${d.v}</button>`;
 
-        const g = document.getElementById('tr-grid');
-        g.innerHTML = "";
-        tracks.forEach((t, i) => {
-            setTimeout(() => {
-                const card = document.createElement('div');
-                card.className = 'card show';
-                card.innerHTML = `<img src="${t.img}"> <div class="card-body"><h3>${t.n}</h3><button class="j-btn" style="margin-top:10px;">${d.j}</button></div>`;
-                g.appendChild(card);
-            }, i * 100);
+        const g = document.getElementById('tr-grid'); g.innerHTML = "";
+        tracks.forEach(t => {
+            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body"><h3>${t.n}</h3><button class="j-btn" style="margin-top:10px;">${d.j}</button></div></div>`;
         });
 
-        document.getElementById('faq-box').innerHTML = `<details><summary>${d.fq} 1</summary><p style="padding:10px">Digital Ethiopia 2026 Mission info.</p></details>`;
+        document.getElementById('faq-list').innerHTML = `<details><summary>${d.fq} #1: What is Fayda ID?</summary><p style="padding:10px">It is the national digital ID for Ethiopia.</p></details><details><summary>${d.fq} #2: Is it free?</summary><p style="padding:10px">Yes, all courses are 100% free.</p></details>`;
     }
 
-    function enroll() {
-        if(document.getElementById('f-id').value.length !== 10) { alert("Enter 10 digits"); return; }
-        alert("Success!");
-    }
-
+    function enroll() { if(document.getElementById('f-id').value.length !== 10) { alert("Enter 10 digits"); return; } alert("Enrolled!"); }
     setL(localStorage.getItem('lang') || 'en');
 </script>
 </body>
