--- a/index.html
+++ b/index.html
@@ -1,14 +1,134 @@
-// Add this inside your setL function to restore the Home Page content
-document.getElementById('hero').innerHTML = `
-    <div style="padding: 60px 20px;">
-        <h1 style="font-size: 2.5rem; margin-bottom: 20px;">${d.w}</h1>
-        <p style="margin-bottom: 20px;">${d.s}</p>
-        <input type="number" id="f-id" class="id-input" placeholder="0000000000" 
-               style="padding: 15px; width: 300px; border-radius: 12px; border: none; text-align: center;">
-        <br>
-        <button onclick="enroll()" class="v-btn" 
-                style="background: #FFD700; color: #003973; padding: 15px 40px; border-radius: 12px; font-weight: bold; border: none; cursor: pointer; margin-top: 20px;">
-            ${d.v}
-        </button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Official 2026</title>
+    <style>
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f9; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--bg); overflow-x: hidden; }
+
+        /* HEADER & NAV */
+        header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
+        .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
+        nav { display: flex; gap: 20px; align-items: center; }
+        nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; }
+        .l-btn { padding: 5px 10px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; margin-left: 5px; }
+        .l-btn.active { background: var(--blue); color: white; }
+
+        /* YELLOW TRACKER */
+        .yellow-tracker { background: var(--yellow); color: var(--blue); padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; }
+        .scrolling-text { display: inline-block; animation: scroll 20s linear infinite; width: 100%; }
+        @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
+
+        /* HERO AREA */
+        .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
+        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); min-height: 300px; }
+        .id-input { padding: 15px; width: 280px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; margin: 20px 0; }
+        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
+
+        /* SECTIONS */
+        .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
+        .content-card { background: white; padding: 30px; border-radius: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; }
+        
+        /* GRID */
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
+        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; }
+        .card img { width: 100%; height: 150px; object-fit: cover; }
+    </style>
+</head>
+<body>
+
+<header>
+    <a href="#" class="logo">ልማት Hub</a>
+    <nav>
+        <a href="#tr-grid">Official Tracks</a>
+        <a href="#h-faq">FAQ</a>
+        <a href="#">About Us</a>
+        <div class="lang-bar">
+            <button class="l-btn" onclick="setL('en')" id="en-btn">EN</button>
+            <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
+            <button class="l-btn" onclick="setL('om')" id="om-btn">ORM</button>
+            <button class="l-btn" onclick="setL('ti')" id="ti-btn">ትግር</button>
+        </div>
+    </nav>
+</header>
+
+<div class="yellow-tracker">
+    <div class="scrolling-text" id="scroll-msg">New: Advanced AI Track is now open! | Join 942,000 citizens today.</div>
+</div>
+
+<div style="text-align:center; padding:10px; color:var(--blue); font-weight:bold;">
+    Active Citizens: <span id="count" style="color:#ef4444">942,108</span>
+</div>
+
+<div class="container">
+    <section class="hero" id="hero"></section>
+
+    <h2 class="section-h" id="h-tr">Official Tracks</h2>
+    <div class="grid" id="tr-grid"></div>
+
+    <h2 class="section-h" id="h-li">Live Now</h2>
+    <div class="content-card">
+        <h3 id="lt" style="color:#ef4444">Digital Workshop</h3>
+        <p id="ld">Join to build your future</p>
     </div>
-`;
+
+    <h2 class="section-h" id="h-faq">FAQ</h2>
+    <div class="content-card" id="faq-list"></div>
+</div>
+
+<footer style="text-align:center; padding:40px; color:#888;" id="foot"></footer>
+
+<script>
+    // Stats Counter
+    let c = 942108;
+    setInterval(() => { c += 1; document.getElementById('count').innerText = c.toLocaleString(); }, 3000);
+
+    const tracks = [
+        {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
+        {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
+        {n: "Web Dev", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
+        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"}
+    ];
+
+    const dict = {
+        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", fq:"FAQ", ft:"© 2026 ልማት Hub"},
+        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", fq:"ጥያቄዎች", ft:"© 2026 ልማት Hub"},
+        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", fq:"Gaaffii", ft:"© 2026 ልማት Hub"},
+        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", fq:"ሕቶታት", ft:"© 2026 ልማት Hub"}
+    };
+
+    function setL(l) {
+        const d = dict[l];
+        document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
+        document.getElementById(l+'-btn').classList.add('active');
+
+        // FIXED HERO SECTION INJECTION
+        document.getElementById('hero').innerHTML = `
+            <div style="padding: 60px 20px;">
+                <h1>${d.w}</h1>
+                <p style="margin: 15px 0;">${d.s}</p>
+                <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
+                <button onclick="enroll()" class="v-btn">${d.v}</button>
+            </div>
+        `;
+
+        document.getElementById('h-tr').innerText = d.tr;
+        document.getElementById('h-faq').innerText = d.fq;
+        document.getElementById('foot').innerText = d.ft;
+
+        const g = document.getElementById('tr-grid'); g.innerHTML = "";
+        tracks.forEach(t => {
+            g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body"><h3>${t.n}</h3></div></div>`;
+        });
+
+        document.getElementById('faq-list').innerHTML = `<details><summary>${d.fq} #1</summary><p>Mission 2026 Details.</p></details>`;
+    }
+
+    function enroll() { alert("Enrolled!"); }
+    setL('en');
+</script>
+</body>
+</html>
